# qstrader

./: .coveragerc  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  load_statistics.ipynb  pyproject.toml  requirements.txt  settings.py.example  setup.py
backtest/: backtest.py
compliance/: compliance.py
conf/: settings.py
data/: AAPL.csv  AGG.csv  AMZN.csv  GOOG.csv  MSFT.csv  SPY.csv  test_SP500TR.csv
event/: event.py
examples/: buy_and_hold.py  buy_and_hold_backtest.py  buy_and_hold_historic_ib.py  buy_and_hold_live_ib.py  buy_and_hold_to_json_file.py  display_prices_backtest.py  display_prices_backtest_oanda.py  display_prices_ig.py  long_short.py  mac_backtest.py  mac_backtest_tearsheet.py  momentum_taa.py  monthly_liquidate_rebalance.py  monthly_liquidate_rebalance_backtest.py  moving_average_cross_backtest.py  quandl_futures_backtest.py  sixty_forty.py  sixty_forty_fees.py  sp500tr_buy_and_hold_backtest.py  strategy_backtest.py  test_examples.py  test_mac_backtest.py  test_sp500tr_buy_and_hold_backtest.py  test_strategy_backtest.py  test_strategy_backtest_quandl.py
execution_handler/: execution_handler.py
order/: order.py
portfolio/: portfolio.py  portfolio_initial_test.py  portfolio_test.py
portfolio_handler/: portfolio_hander.py  portfolio_handler.py  portfolio_handler_test.py
position/: position.py  position_test.py
position_sizer/: position_sizer.py
price_handler/: price_handler.py  price_handler_test.py  yahoo_price_handler.py
qstrader/: action.py  base_handler.py  compat.py  event.py  exception.py  ib.py  (+17 more)
(+235 files in other folders)
